--- a/index.html
+++ b/index.html
@@ -59,47 +59,42 @@
             <section class="article">
                 <div class="container">
                     <h2 class="article-heading-1">My Goals: In 2yrs+</h2>
-
-
                     <h2 class="article-heading">2025</h2>
                     <div class="article-content">
                         <hr class="horizontal-rule">
-
-                        <p class="paragraph">In the next two years, a developer's goals might include:
-                            Enhance Technical Skills & Master key programming languages and frameworks relevant to their
+                        <p class="paragraph">In the next two years, as a developer I would want to:
+                            Enhance Technical Skills & Master key programming languages and frameworks relevant to my
                             field.
                         </p>
                         <br>
                         <p class="paragraph">
-                            Contribute to Open Source Actively participate in open-source projects to gain experience
+                            Contribute to Open Source Actively and participate in open-source projects to gain
+                            experience
                             and
                             network with other
                             developers.
                         </p>
-
                         <div class="dev">
                             <img src="images/code (3).png" alt="Dev">
                         </div>
                     </div>
-
                     <div class="fade">
                         <h2 class="article-heading">2026</h2>
                         <div class="article-content">
                             <hr class="horizontal-rule">
                             <p class="paragraph">
-                                Gain Certifications to validate their skills and knowledge.
-
+                                Gain Certifications to validate acquired skills and knowledge.
                                 Build a Portfolio Develop and showcase a diverse portfolio of projects on platforms like
                                 GitHub.
                                 Develop Soft Skills Enhance communication, teamwork, and project management skills.
                             </p>
                             <br>
                             <p class="paragraph">
-                                Improve Problem-Solving Skills Regularly practice coding challenges and algorithms to
+                                Improve Problem-Solving Skills by regularly participating in coding challenges and
+                                algorithms to
                                 sharpen problem-solving
                                 abilities.
                             </p>
-
                             <div class="dev">
                                 <img src="images/organized-layers-stack-black-23811.png" alt="Dev">
                             </div>
