--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
                     </article>
                     <img src="images/IMG_8317e_512x512_1_300x300.jpg" alt="Profile"
                         class="hero-image hero-image-animation" data-testid="slackProfilePicture">
+                    <div class="pop">
+                        <p id="date">
+                            <li data-testid="currentDay currentTimeUTC"></li>
+                        </p>
+                    </div>
                 </section>
             </div>
         </section>
@@ -129,5 +134,3 @@
         </section>
     </footer>
 </body>
-
-</html>
