--- a/index.html
+++ b/index.html
@@ -46,10 +46,15 @@
                             learning, seeking
                             opportunities
                             to contribute to projects and collaborate with others in the tech community.</p>
+                        <div class="pop-2">
+                            <p id="date-2">
+                                <li data-testid="currentDay currentTimeUTC"></li>
+                            </p>
+                        </div>
                     </article>
                     <img src="images/IMG_8317e_512x512_1_300x300.jpg" alt="Profile"
                         class="hero-image hero-image-animation" data-testid="slackProfilePicture">
-                    <div class="pop">
+                    <div class="pop-1">
                         <p id="date">
                             <li data-testid="currentDay currentTimeUTC"></li>
                         </p>
